--- a/app/src/main/res/layout/fragment_number_password_login_layout.xml
+++ b/app/src/main/res/layout/fragment_number_password_login_layout.xml
@@ -13,6 +13,7 @@
             android:layout_height="match_parent"
             android:layout_weight="5"
             android:background="@null"
+            android:inputType="number"
             android:hint="   手机号码"
             android:paddingLeft="10dp"
             android:maxLength="11"
@@ -46,6 +47,7 @@
             android:layout_weight="5"
             android:background="@null"
             android:hint="   密码"
+            android:inputType="textPassword"
             android:paddingLeft="10dp"
             android:maxLength="11"
             android:drawableLeft="@mipmap/identyfingcode"/>
