--- a/app/src/main/res/layout/fragment_phone_fast_login_layout.xml
+++ b/app/src/main/res/layout/fragment_phone_fast_login_layout.xml
@@ -17,6 +17,7 @@
             android:layout_height="match_parent"
             android:layout_weight="7"
             android:background="@null"
+            android:inputType="number"
             android:drawableLeft="@mipmap/phone"
             android:hint="   手机号码"
             android:maxLength="11"
@@ -58,7 +59,8 @@
             android:background="@null"
             android:drawableLeft="@mipmap/identyfingcode"
             android:hint="   验证码"
-            android:maxLength="11"
+            android:inputType="number"
+            android:maxLength="6"
             android:paddingLeft="10dp" />
 
         <CheckBox
