--- a/app/src/main/res/layout/beauty.xml
+++ b/app/src/main/res/layout/beauty.xml
@@ -4,8 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/beauty_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="美妆个护" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/beauty_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
