--- a/app/src/main/res/layout/poem.xml
+++ b/app/src/main/res/layout/poem.xml
@@ -4,8 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/poem_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="诗和远方" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/poem_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
