--- a/app/src/main/res/layout/activity_cash_update.xml
+++ b/app/src/main/res/layout/activity_cash_update.xml
@@ -1,15 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.phone1000.stelephonegoods.activities.CashUpdateActivity">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="提升额度"/>
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:gravity="center_vertical"
+        android:layout_height="50dp">
+        <ImageView
+            android:id="@+id/cashupdate_back"
+            android:layout_width="30dp"
+            android:src="@mipmap/login_back"
+            android:layout_height="30dp" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="额度提升"
+            android:textColor="#000"
+            android:paddingRight="25dp"
+            android:textSize="20sp"
+            android:gravity="center"/>
+    </LinearLayout>
+   <TextView
+       android:layout_width="match_parent"
+       android:layout_height="40dp"
+       android:text="实名认证并授权最高可获得信用额度"
+       android:gravity="center"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="10,000.00"
+        android:textSize="25sp"
+        android:textColor="@color/colorAccent"
+        android:gravity="center"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <android.support.v4.view.ViewPager
+            android:id="@+id/cashupdate_viewpager"
+            android:layout_width="match_parent"
+            android:layout_marginBottom="60dp"
+            android:layout_height="match_parent">
+
+        </android.support.v4.view.ViewPager>
+        <LinearLayout
+            android:id="@+id/crashupdate_ll"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom"
+            android:gravity="center">
+
+        </LinearLayout>
+    </FrameLayout>
+
+</LinearLayout>
