--- a/app/src/main/res/layout/activity_cash_update.xml
+++ b/app/src/main/res/layout/activity_cash_update.xml
@@ -46,15 +46,16 @@
             android:layout_height="match_parent">
 
         </android.support.v4.view.ViewPager>
-        <LinearLayout
-            android:id="@+id/crashupdate_ll"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/crashupdate_tablayout"
             android:layout_width="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:visibility="invisible"
             android:layout_height="60dp"
-            android:orientation="horizontal"
-            android:layout_gravity="bottom"
-            android:gravity="center">
+            android:layout_gravity="bottom">
 
-        </LinearLayout>
+        </android.support.design.widget.TabLayout>
     </FrameLayout>
 
 </LinearLayout>
