--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -1,15 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.phone1000.stelephonegoods.activities.OrderActivity">
-<TextView
+<FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="我的订单"/>
-</RelativeLayout>
+    android:layout_height="50dp">
+    <TextView
+        android:background="#fff"
+        android:id="@+id/order_title"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="20sp"
+        android:textColor="#333"
+        android:gravity="center"
+        android:text="我的订单"/>
+    <ImageView
+        android:background="#fff"
+        android:id="@+id/order_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:src="@mipmap/login_back"
+        />
+    <TextView
+        android:background="#fff"
+        android:id="@+id/order_confige"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:text="使用说明"
+        android:gravity="center_vertical"
+        android:layout_gravity="right"
+        android:layout_marginTop="10dp"
+        android:visibility="gone"
+        android:layout_marginRight="10dp"/>
+</FrameLayout>
+    <FrameLayout
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/order_lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
+        <LinearLayout
+            android:background="#fff"
+            android:id="@+id/order_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_marginTop="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:scaleType="fitXY"
+                android:src="@mipmap/order_img_nothing"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="啥都没有，好冷清"
+                android:gravity="center"
+                android:textSize="16sp"/>
+        </LinearLayout>
+    </FrameLayout>
+</LinearLayout>
