我的页面的第二层框架

--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,15 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.phone1000.stelephonegoods.activities.AccountActivity">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="账户管理"/>
-</RelativeLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <TextView
+            android:background="#fff"
+            android:id="@+id/order_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:textColor="#333"
+            android:gravity="center"
+            android:text="账户管理"/>
+        <ImageView
+            android:background="#fff"
+            android:id="@+id/account_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/login_back"
+            />
+    </FrameLayout>
+    <LinearLayout
+        android:id="@+id/account_phoneNum"
+        android:background="#fff"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_height="45dp">
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="手机号码"
+            android:gravity="center_vertical"
+            android:textColor="#000"
+            android:paddingLeft="5dp"/>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:text="183****9935  "
+            android:background="#fff"
+            android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+            android:paddingRight="10dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/account_login_password"
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_height="45dp">
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="登陆密码"
+            android:gravity="center_vertical"
+            android:textColor="#000"
+            android:paddingLeft="5dp"/>
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:text="修改登录密码  "
+            android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+            android:paddingRight="10dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/account_pay_password"
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_height="45dp">
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="支付密码"
+            android:gravity="center_vertical"
+            android:textColor="#000"
+            android:paddingLeft="5dp"/>
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:text="未设置  "
+            android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+            android:paddingRight="10dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/account_idcard_certification"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_height="45dp">
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="身份证审核"
+            android:gravity="center_vertical"
+            android:textColor="#000"
+            android:paddingLeft="5dp"/>
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:text="未审核  "
+            android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+            android:paddingRight="10dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/account_vadio_certification"
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_height="45dp">
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="视频认证"
+            android:gravity="center_vertical"
+            android:textColor="#000"
+            android:paddingLeft="5dp"/>
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:text="未认证   "
+            android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+            android:paddingRight="10dp"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/account_bankcard_manager"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:layout_height="45dp">
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="银行卡管理"
+            android:gravity="center_vertical"
+            android:textColor="#000"
+            android:paddingLeft="5dp"/>
+        <TextView
+            android:background="#fff"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="right|center_vertical"
+            android:text="立即添加  "
+            android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+            android:paddingRight="10dp"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff"/>
+</LinearLayout>
