--- a/app/src/main/res/layout/activity_commen_problem.xml
+++ b/app/src/main/res/layout/activity_commen_problem.xml
@@ -1,15 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.phone1000.stelephonegoods.activities.CommenProblemActivity">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="常见问题"/>
-</RelativeLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <TextView
+            android:background="#fff"
+            android:id="@+id/order_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:textColor="#333"
+            android:gravity="center"
+            android:text="常见问题"/>
+        <ImageView
+            android:background="#fff"
+            android:id="@+id/problem_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/login_back"
+            />
+    </FrameLayout>
+    <LinearLayout
+        android:id="@+id/problem_ll_hot"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="  热门问题"
+            android:background="#fff"
+            android:textColor="#333"
+            android:paddingLeft="4dp"
+            android:drawableLeft="@mipmap/hot_problem"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:layout_width="40dp"
+            android:background="#fff"
+            android:layout_height="match_parent"
+            android:drawableLeft="@mipmap/list_disclosure_ndicator_nol_gray"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/problem_ll_safe"
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="  账户安全"
+            android:background="#fff"
+            android:textColor="#333"
+            android:drawableLeft="@mipmap/safe"
+            android:paddingLeft="4dp"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:layout_width="40dp"
+            android:background="#fff"
+            android:layout_height="match_parent"
+            android:drawableLeft="@mipmap/list_disclosure_ndicator_nol_gray"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/problem_ll_credit"
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="  信用额度"
+            android:background="#fff"
+            android:textColor="#333"
+            android:drawableLeft="@mipmap/credit"
+            android:paddingLeft="4dp"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:layout_width="40dp"
+            android:background="#fff"
+            android:layout_height="match_parent"
+            android:drawableLeft="@mipmap/list_disclosure_ndicator_nol_gray"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/problem_ll_buy"
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="  商品购买"
+            android:background="#fff"
+            android:textColor="#333"
+            android:drawableLeft="@mipmap/buy"
+            android:paddingLeft="4dp"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:layout_width="40dp"
+            android:background="#fff"
+            android:layout_height="match_parent"
+            android:drawableLeft="@mipmap/list_disclosure_ndicator_nol_gray"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/problem_ll_service"
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="  商品售后"
+            android:background="#fff"
+            android:textColor="#333"
+            android:drawableLeft="@mipmap/after_salse_service"
+            android:paddingLeft="4dp"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:layout_width="40dp"
+            android:background="#fff"
+            android:layout_height="match_parent"
+            android:drawableLeft="@mipmap/list_disclosure_ndicator_nol_gray"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/problem_ll_installment"
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="  分期还款"
+            android:background="#fff"
+            android:textColor="#333"
+            android:paddingLeft="4dp"
+            android:drawableLeft="@mipmap/installment_repayment"
+            android:gravity="center_vertical"/>
+        <TextView
+            android:layout_width="40dp"
+            android:background="#fff"
+            android:layout_height="match_parent"
+            android:drawableLeft="@mipmap/list_disclosure_ndicator_nol_gray"/>
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#fff"/>
+</LinearLayout>
