--- a/app/src/main/res/layout/activity_reciever_address.xml
+++ b/app/src/main/res/layout/activity_reciever_address.xml
@@ -1,15 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.phone1000.stelephonegoods.activities.RecieverAddressActivity">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="收货地址"/>
-</RelativeLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+        <TextView
+            android:background="#fff"
+            android:id="@+id/address_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"
+            android:textColor="#333"
+            android:gravity="center"
+            android:text="我的订单"/>
+        <ImageView
+            android:background="#fff"
+            android:id="@+id/address_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:src="@mipmap/login_back"
+            />
+    </FrameLayout>
+    <FrameLayout
+        android:layout_marginTop="1dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/address_lv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></ListView>
+        <LinearLayout
+            android:background="#fff"
+            android:id="@+id/address_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ImageView
+                android:layout_marginTop="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:scaleType="fitXY"
+                android:src="@mipmap/address_img_nothing"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="亲，别忘了填写您在地球上的收货地址"
+                android:gravity="center"
+                android:textSize="16sp"/>
+            <Button
+                android:id="@+id/address_add"
+                android:layout_marginTop="40dp"
+                android:layout_gravity="center"
+                android:layout_width="120dp"
+                android:layout_height="40dp"
+                android:background="@mipmap/list_cash_ticket_bg"
+                android:text="添加新地址"/>
+        </LinearLayout>
+    </FrameLayout>
+</LinearLayout>
