--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,15 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.phone1000.stelephonegoods.activities.SettingsActivity">
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="设置"/>
-</RelativeLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+
+        <TextView
+            android:id="@+id/order_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#fff"
+            android:gravity="center"
+            android:text="设置"
+            android:textColor="#333"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/settings_back"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:background="#fff"
+            android:src="@mipmap/login_back" />
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/settings_user_protocol"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_marginTop="10dp"
+        android:background="#fff"
+        android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="5dp"
+        android:text="用户协议"
+        android:textColor="#000"
+        android:textSize="16sp"></TextView>
+
+    <TextView
+        android:id="@+id/settings_user_privacy"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_marginTop="1dp"
+        android:background="#fff"
+        android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="5dp"
+        android:text="隐私条款"
+        android:textColor="#000"
+        android:textSize="16sp"></TextView>
+
+    <TextView
+        android:id="@+id/settings_about_us"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_marginTop="10dp"
+        android:background="#fff"
+        android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="5dp"
+        android:text="关于我们"
+        android:textColor="#000"
+        android:textSize="16sp"></TextView>
+
+    <TextView
+        android:id="@+id/settings_check_update"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_marginTop="1dp"
+        android:background="#fff"
+        android:drawableRight="@mipmap/list_disclosure_ndicator_nol_gray"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="5dp"
+        android:text="检查跟新"
+        android:textColor="#000"
+        android:textSize="16sp"></TextView>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="#fff">
+        <Button
+            android:layout_marginTop="40dp"
+            android:id="@+id/settings_exit"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:background="@drawable/login_button_bg_selector"
+            android:textColor="#fff"
+            android:text="退出账号"/>
+    </LinearLayout>
+</LinearLayout>
