--- a/app/src/main/res/layout/fragment_homepage_layout.xml
+++ b/app/src/main/res/layout/fragment_homepage_layout.xml
@@ -4,10 +4,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:id="@+id/home_linear"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginRight="60dp"
+            android:padding="12dp"
+            android:layout_centerHorizontal="true"
+            android:src="@mipmap/home_img_signature" />
+
+        <ImageView
+            android:id="@+id/cart"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:padding="8dp"
+            android:src="@mipmap/nav_icon_shopping_red_nol" />
+    </RelativeLayout>
+
     <android.support.design.widget.TabLayout
         android:id="@+id/home_tab"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="50dp"
+        android:layout_below="@id/home_linear" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/home_pager"
