--- a/app/src/main/res/layout/activity_certification.xml
+++ b/app/src/main/res/layout/activity_certification.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.phone1000.stelephonegoods.activities.CertificationActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -30,7 +37,7 @@
     </LinearLayout>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="20dp"
         android:gravity="center"
         android:text="实名认证成功后将不可修改"/>
     <LinearLayout
@@ -83,6 +90,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#fff"
+            android:editable="false"
             android:drawableRight="@mipmap/list_icon_preferred_contact_number" />
     </LinearLayout>
     <LinearLayout
@@ -113,7 +121,6 @@
             android:layout_height="match_parent"
             android:text="选择银行  "
             android:gravity="center"
-            android:layout_marginLeft="5dp"
             android:background="#fff"/>
         <EditText
             android:id="@+id/certification_textview_bank"
@@ -135,7 +142,6 @@
             android:layout_height="match_parent"
             android:text="手机号码  "
             android:gravity="center"
-            android:layout_marginLeft="5dp"
             android:background="#fff"/>
         <EditText
             android:id="@+id/certification_textview_phonenum"
@@ -167,7 +173,6 @@
             android:layout_height="match_parent"
             android:text="验证码  "
             android:gravity="center"
-            android:layout_marginLeft="5dp"
             android:background="#fff"/>
         <EditText
             android:id="@+id/certification_textview_identifycode"
@@ -196,7 +201,11 @@
         android:gravity="center"/>
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="60dp"
         android:gravity="center"
+        android:lines="2"
         android:text="CFCA 是人民银行和国家信息安全管理中心批准设立指定机构"/>
+        </LinearLayout>
+    </ScrollView>
+
 </LinearLayout>
