--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,15 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_main_radiogroup_height">50dp</dimen>
+    <dimen name="tsize_13">13sp</dimen>
+    <dimen name="margin_40">40dp</dimen>
+    <dimen name="margin_20">20dp</dimen>
+    <dimen name="fragment_read_title_hieght">55dp</dimen>
+    <dimen name="fragment_read_item_zero_image_height">150dp</dimen>
+    <dimen name="fragment_read_item_one_imagewidth">120dp</dimen>
+    <dimen name="fragment_read_item_one_image_height">70dp</dimen>
+    <dimen name="login_head_height">47dp</dimen>
+    <dimen name="login_tablayout_height">50dp</dimen>
+    <dimen name="login_edittext_width">40dp</dimen>
+    <dimen name="login_edittext_height">40dp</dimen>
 </resources>
