--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cart_rela"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="200dp"
     android:layout_margin="5dp">
 
     <ImageView
@@ -11,6 +12,7 @@
         android:src="@mipmap/ic_launcher" />
 
     <TextView
+        android:id="@+id/cart_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/cart_img"
@@ -78,6 +80,7 @@
         android:textColor="#f9139d" />
 
     <Button
+        android:id="@+id/cart_claering"
         android:layout_width="80dp"
         android:layout_height="25dp"
         android:layout_alignParentRight="true"
