--- a/app/src/main/res/layout/fragment_read_layout_zero.xml
+++ b/app/src/main/res/layout/fragment_read_layout_zero.xml
@@ -1,36 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/fragment_read_item_zero_image"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/fragment_read_item_zero_image_height"
-        android:src="@mipmap/ic_launcher"/>
-    <LinearLayout
-        android:id="@+id/fragment_read_item_zero_ll"
-        android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:background="#000"
-        android:alpha="0.3"
-        android:layout_alignBottom="@+id/fragment_read_item_zero_image"
-        android:orientation="vertical">
-        <TextView
-            android:id="@+id/fragment_read_item_zero_title"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:textColor="#fff"
-            android:text="手机配上她，能让你变得跟大更长"/>
-    </LinearLayout>
-    <TextView
-        android:id="@+id/fragment_read_item_zero_summary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
+    <android.support.v7.widget.CardView
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_below="@+id/fragment_read_item_zero_ll"
-        android:text="世界因你而伟大！"/>
+        android:layout_marginBottom="10dp"
+        app:cardElevation="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/fragment_read_item_zero_image"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/fragment_read_item_zero_image_height"
+                android:src="@mipmap/ic_launcher"/>
+            <LinearLayout
+                android:id="@+id/fragment_read_item_zero_ll"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:background="#000"
+                android:alpha="0.3"
+                android:layout_alignBottom="@+id/fragment_read_item_zero_image"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/fragment_read_item_zero_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#fff"
+                    android:text="手机配上她，能让你变得跟大更长"/>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/fragment_read_item_zero_summary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:layout_marginLeft="10dp"
+                android:layout_below="@+id/fragment_read_item_zero_ll"
+                android:text="世界因你而伟大！"/>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
