--- a/app/src/main/res/layout/activity_super_bac_ktwo.xml
+++ b/app/src/main/res/layout/activity_super_bac_ktwo.xml
@@ -508,6 +508,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp">
             <FrameLayout android:background="#ff3b3b3b"
+                android:id="@+id/super_cart"
                 android:layout_width="0.0dip"
                 android:layout_height="match_parent"
                 android:layout_weight="2.0">
@@ -524,6 +525,13 @@
                     android:text="购物车"
                     android:drawableTop="@mipmap/tool_icon_shopping_nol" />
             </FrameLayout>
+            <TextView
+                android:id="@+id/backtwo_count"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:text="1"
+                android:visibility="gone"
+                android:background="@drawable/circle"/>
             <Button android:textSize="18.0sp"
                 android:textColor="#ffffff"
                 android:id="@+id/btn_add"
