--- a/app/src/main/res/layout/fragment_readbook_layout.xml
+++ b/app/src/main/res/layout/fragment_readbook_layout.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ListView
+            android:backgroundTintMode="multiply"
             android:id="@+id/fragment_read_listview"
             android:layout_width="match_parent"
             android:background="#eee"
